--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,6 +6,6 @@
   <li>Status: <%= @item.status %></li>
 </ul>
 
-<%# if current_user.role == 'admin' %>
+<% if current_user.role == 'admin' %>
   <%= link_to "Edit Item", edit_admin_item_path(@item) %>
-<%# end %>
+<% end %>
