--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,6 +1,10 @@
-<% @items.each do |item, quantity| %>
+<% @items.each do |item, values| %>
   <p>Product: <%= item.title %></p>
   <p>Description: <%= item.description %></p>
-  <p>Price: $<%= item.price %></p>
-  <p>Quantity: <%= quantity %></p>
+  <p>Price: $<%= number_with_precision(item.price, :precision => 2) %></p>
+  <p>Quantity: <%= values[:quantity] %></p>
+  <p>Subtotal: $<%= values[:subtotal] %></p>
 <% end %>
+<p>Total <%=  %></p>
+
+<%#number_with_precision(@item.price, :precision => 2) %>
