--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -3,8 +3,6 @@
   <p>Description: <%= item.description %></p>
   <p>Price: $<%= number_with_precision(item.price, :precision => 2) %></p>
   <p>Quantity: <%= values[:quantity] %></p>
-  <p>Subtotal: $<%= values[:subtotal] %></p>
+  <p>Subtotal: $<%= number_with_precision(values[:subtotal], :precision => 2) %></p>
 <% end %>
-<p>Total <%=  %></p>
-
-<%#number_with_precision(@item.price, :precision => 2) %>
+<p>Total: $<%= number_with_precision(@cart.total, :precision => 2) %></p>
