--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -4,5 +4,7 @@
   <p>Price: $<%= number_with_precision(item.price, :precision => 2) %></p>
   <p>Quantity: <%= values[:quantity] %></p>
   <p>Subtotal: $<%= number_with_precision(values[:subtotal], :precision => 2) %></p>
+
+  <p><%= link_to "Remove", cart_path(@cart, item_id: item.id), method: :delete %>
 <% end %>
 <p>Total: $<%= number_with_precision(@cart.total, :precision => 2) %></p>
