--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -4,7 +4,7 @@
   <p>Price: $<%= number_with_precision(item.price, :precision => 2) %></p>
   <p>Quantity: <%= values[:quantity] %>
   <%= button_to "+", carts_path(item_id: item.id) %>
-  <%= button_to "-", carts_path(item_id: item.id), method: "put" %></p>
+  <%= button_to "-", cart_path(@cart, item_id: item.id), method: :put %></p>
   <%#= button_to %>
   <%#= form_for @cart.contents.values, method: "patch" do |f| %>
     <%#= f.number_field :quantity %>
