--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -1,7 +1,1 @@
-<h1>Admin Dashboard</h1>
-
-<%= current_user.username %>
-
-<%= link_to "View All Items", admin_items_path %>
-
-<%= link_to "Edit my Profile", edit_admin_dashboard_path(current_user) %>
+<h1>Do we need this page?</h1>
