--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,6 @@
 <% @items.each do |item| %>
   <li><%= item.title %></li>
   <li><%= item.price %></li>
-  <li><%= link_to "Add to Cart", carts_path %></li>
+  <li><%= link_to "Add to Cart", carts_path(item_id: item.id), method: :post %></li>
 <% end %>
 </ul>
