--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <h2> <%= link_to "View Cart", carts_path %> </h2>
       <% if current_user %>
         Logged in as <%= current_user.username %><br />
-        <%= link_to "Logout", logout_path %>
+        <%= link_to "Logout", logout_path, method: :delete %>
       <% else %>
         <%= link_to "Login", login_path %>
       <% end %>
