added dropdown menu for an admin to update the status of an order

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -18,4 +18,9 @@
 
 <% @orders.each do |order| %>
   <%= link_to "Order #{order.id}, #{order.user.username}", user_order_path(order.user, order) %>
+  <%= form_for order, url: {action: "update", id: order} do |f| %>
+    <%= f.label "Update Order Status: " %>
+    <%= f.select :status, ["Ordered", "Paid", "Cancelled", "Completed"] %>
+    <%= f.submit "Update Status" %>
+  <% end %>
 <% end %>
