create orders#create and orders#index route/controller/view to pass cart through 'checkout' and create an order

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -18,7 +18,7 @@
 <p>Total: $<%= number_with_precision(@cart.total, :precision => 2) %></p>
 
 <% if current_user %>
-
+  <%= link_to "Checkout", user_orders_path(current_user), method: :post %>
 <% else %>
   <%= link_to "Login or Create Account to Checkout", login_path %>
 <% end %>
