--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,6 +11,8 @@
   <% end %>
 </ul>
 
-<% if current_user.role == 'admin' %>
-  <%= link_to "Edit Item", edit_admin_item_path(@item) %>
+<% if current_user %>
+  <% if current_user.admin? %>
+    <%= link_to "Edit Item", edit_admin_item_path(@item) %>
+  <% end %>
 <% end %>
