--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -30,4 +30,6 @@
   <% end %>
 </table>
 <h3>Total (<%= pluralize(order.items.sum(:quantity), "item") %>): $<%= number_with_precision(order.total, :precision => 2) %></h3>
+
+<%= link_to "View Order", user_order_path(current_user, order) %>
 <% end %>
