--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,17 @@
  *= require_self
  */
 @import 'base';
+@import 'skeleton';
+// @import 'colors';
+// @import 'typography';
+
+@import 'components/buttons';
+@import 'components/forms';
+@import 'components/navbars';
+
+// @import 'sections/header';
+// @import 'sections/about';
+// @import 'sections/history';
+// @import 'sections/services';
+// @import 'sections/customers';
+// @import 'sections/footer';
