--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,8 @@
     <% flash.each do |type, message| %>
       <%= content_tag :div, sanitize(message), class: type %>
     <% end %>
-    <%= yield %>
+    <div class="container_view">
+      <%= yield %>
+    </div>
   </body>
 </html>
