change accent color, assign color to button and set width for login form

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -5,14 +5,14 @@ $font-sans: "Avenir Next", sans-serif;
 
 $light: #F4F4F4;
 $dark: #696969;
-$accent: #FE5722;
+$accent: #FEC007;
 $light-text: #F4F4F4;
 $primary-text: #212121;
 $second-text: #757575;
 $divider: #BCBCBC;
 
 * {
-	border: 1px solid red;
+	// border: 1px solid red;
 }
 
 * {
