--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  width: 50%;
+  width: 300px;
   border: 1px solid #757575;
   border-radius: 4px;
   padding: 5px 25px;
@@ -11,9 +11,17 @@
     justify-content: flex-start;
     width: 100%;
   }
+  h3 {
+    font-size: 16px;
+    text-align-last: center;
+  }
   form {
     width: 100%;
     display: flex;
     flex-direction: column;
+    input {
+      border-radius: 4px;
+      border: 1px solid #757575;
+    }
   }
 }
