user can click on an item's title to be taken to the item show page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
 <% @items.each do |item| %>
-  <li><%= item.title %></li>
+  <li><%= link_to item.title, item_path(item) %></li>
   <li><%= item.price %></li>
   <% if item.active? %>
     <li><%= link_to "Add to Cart", carts_path(item_id: item.id), method: :post %></li>
