--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= current_user.username %><br />
 
-<%= link_to "View All Items", admin_items_path %><br />
+<%= link_to "View All Items", items_path %><br />
 
 <%= link_to "Edit my Profile", edit_admin_dashboard_path(current_user) %><br />
 
