Paperclip model, migration, gem and view

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -14,6 +14,9 @@
   <%= f.label :status %>
   <%= f.select :status, ["active", "retired"] %>
 
+  <%= f.label :image_att, "Attach Image" %>
+  <%= f.file_field :image_att %>
+
   <%= f.submit "Submit" %>
 
 <% end %>
