--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,11 +1,18 @@
+.form_container {
+  display: flex;
+  justify-content: center;
+}
+
 .user_forms {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   width: 300px;
-  border: 1px solid #757575;
+  background-color: #FFF;
+  // border: 1px solid #757575;
   border-radius: 4px;
+  box-shadow: 0 14px 45px 0 rgba(0, 0, 0, 0.10), 0 10px 18px rgba(0, 0, 0, 0.10);
   padding: 5px 25px;
   h2, h3 {
     justify-content: flex-start;
