add hound changes

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -10,15 +10,13 @@ $light-text: #F4F4F4;
 $primary-text: #212121;
 $second-text: #757575;
 $divider: #BCBCBC;
+$background: #EDEDED;
 
 * {
 	// border: 1px solid red;
-}
-
-* {
   font-family: $font-sans;
 }
 
 body {
-  background-color: #EDEDED;
+  background-color: $background;
 }
