--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,3 +1,5 @@
+@import 'base';
+
 .form_container {
   display: flex;
   justify-content: center;
@@ -9,7 +11,7 @@
   flex-wrap: wrap;
   align-items: center;
   width: 300px;
-  background-color: #FFF;
+  background-color: #fff;
   // border: 1px solid #757575;
   border-radius: 4px;
   box-shadow: 0 14px 45px 0 rgba(0, 0, 0, 0.10), 0 10px 18px rgba(0, 0, 0, 0.10);
@@ -28,7 +30,7 @@
     flex-direction: column;
     input {
       border-radius: 4px;
-      border: 1px solid #757575;
+      border: 1px solid $second-text;
     }
   }
 }
