--- a/app/assets/stylesheets/sections/_index.scss
+++ b/app/assets/stylesheets/sections/_index.scss
@@ -1,51 +1,27 @@
+@import 'base';
+
 .grid {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
+  justify-content: space-around;
+
   article {
+    background-color: $light;
+    // border: 1px solid #757575;
+    border-radius: 4px;
+    box-shadow: 0 14px 45px 0 rgba(0, 0, 0, 0.10), 0 10px 18px rgba(0, 0, 0, 0.10);
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    text-align: center;
     height: 300px;
-    width: 270px;
-    padding-bottom: 20px;
-    // border: 1px solid #757575;
-    box-shadow: 0 14px 45px 0 rgba(0, 0, 0, 0.10), 0 10px 18px rgba(0, 0, 0, 0.10);
+    justify-content: flex-end;
     margin: 50px;
-    border-radius: 4px;
-    background-color: #F4F4F4;
+    padding-bottom: 20px;
+    text-align: center;
+    width: 270px;
+
     img {
       align-self: center;
       margin: 35px;
     }
   }
 }
-
-// .user_forms {
-//   display: flex;
-//   flex-direction: column;
-//   flex-wrap: wrap;
-//   align-items: center;
-//   width: 300px;
-//   border: 1px solid #757575;
-//   border-radius: 4px;
-//   padding: 5px 25px;
-//   h2, h3 {
-//     justify-content: flex-start;
-//     width: 100%;
-//   }
-//   h3 {
-//     font-size: 16px;
-//     text-align-last: center;
-//   }
-//   form {
-//     width: 100%;
-//     display: flex;
-//     flex-direction: column;
-//     input {
-//       border-radius: 4px;
-//       border: 1px solid #757575;
-//     }
-//   }
-// }
