.link:hover and btn styling

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -14,7 +14,9 @@ $background: #EDEDED;
 
 * {
 	// border: 1px solid red;
+  color: $primary-text;
   font-family: $font-sans;
+  text-decoration: none;
 }
 
 body {
