--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -7,3 +7,10 @@ input {
 .login-submit {
   background-color: $accent;
 }
+
+.btn {
+  background-color: $accent;
+  padding: 2px 6px 2px 6px;
+  margin: 0px 80px;
+  border-radius: 4px;
+}
