--- a/app/assets/stylesheets/components/_navbars.scss
+++ b/app/assets/stylesheets/components/_navbars.scss
@@ -7,11 +7,15 @@
   display: flex;
   justify-content: space-between;
   margin: 0;
-  padding: 10px;
+  padding: 5px;
+
+  h2 {
+    margin: 8px;
+  }
 
   .nav_links {
     a {
-      margin-left: 20px;
+      margin: 0 20px;
     }
     a:hover {
       color: $dark-hover;
