--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -8,26 +8,26 @@
 
 <%= link_to "Add new item", new_admin_item_path %><br />
 
-<h5>Order Status Summaries</h5>
+<h5>Order Status Summaries:</h5>
 <table>
   <tr>
-    <td><%= link_to "All Orders:", admin_dashboard_path(:filter => "All Orders") %></td>
+    <td><button><%= link_to "All Orders:", admin_dashboard_path(:filter => "All Orders") %></button></td>
     <td><%= @order_count.count %></td>
   <tr>
-    <td><%= link_to "Ordered:", admin_dashboard_path(:filter => "Ordered") %></td>
-    <td><%= @order_count.where(status: "Ordered").count %></td>
+    <td><button><%= link_to "Ordered:", admin_dashboard_path(:filter => "Ordered") %></button></td>
+    <td><%= @order_count.orders_only("Ordered") %></td>
   </tr>
   <tr>
-    <td><%= link_to "Paid:", admin_dashboard_path(:filter => "Paid") %></td>
-    <td><%= @order_count.where(status: "Paid").count %></td>
+    <td><button><%= link_to "Paid:", admin_dashboard_path(:filter => "Paid") %></button></td>
+    <td><%= @order_count.orders_only("Paid") %></td>
   </tr>
   <tr>
-    <td><%= link_to "Cancelled:", admin_dashboard_path(:filter => "Cancelled") %></td>
-    <td><%= @order_count.where(status: "Cancelled").count %></td>
+    <td><button><%= link_to "Cancelled:", admin_dashboard_path(:filter => "Cancelled") %></button></td>
+    <td><%= @order_count.orders_only("Cancelled") %></td>
   </tr>
   <tr>
-    <td><%= link_to "Completed:", admin_dashboard_path(:filter => "Completed") %></td>
-    <td><%= @order_count.where(status: "Completed").count %></td>
+    <td><button><%= link_to "Completed:", admin_dashboard_path(:filter => "Completed") %></button></td>
+    <td><%= @order_count.orders_only("Completed") %></td>
   </tr>
 </table>
 <br />
