--- a/app/assets/stylesheets/components/_navbars.scss
+++ b/app/assets/stylesheets/components/_navbars.scss
@@ -23,3 +23,23 @@
     }
   }
 }
+
+.cat_bar {
+  align-items: center;
+  background-color: white;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.10);
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 5px;
+
+  .categories_links {
+    a {
+      margin: 0 20px;
+    }
+    a:hover {
+      color: $dark-hover;
+      font-weight: 500;
+    }
+  }
+}
