edit and new item forms are now partials

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -2,27 +2,7 @@
   <div class="user_forms">
     <h2>Add New Item</h2>
 
-    <%= form_for [:admin, @item] do |f| %>
-      <%= f.label :title, class: 'label' %>
-      <%= f.text_field :title, class: 'text_input' %><br>
+    <%= render partial: "form" %>
 
-      <%= f.label :description, class: 'label' %>
-      <%= f.text_field :description, class: 'text_input' %><br>
-
-      <%= f.label :price, class: 'label' %>
-      <%= f.text_field :price, class: 'text_input' %><br>
-
-      <%= f.label :category_list, class: 'label' %>
-      <%= f.text_field :category_list, class: 'text_input' %><br>
-
-      <%= f.label :status, class: 'label' %>
-      <%= f.select :status, ["active", "retired"] %><br>
-
-      <%= f.label :image_att, "Attach Image", class: 'label' %>
-      <%= f.file_field :image_att %><br>
-
-      <%= f.submit "Create Item", class: 'login-submit' %>
-
-    <% end %>
   </div>
 </div>
