add index and fix height of pictures

--- a/app/assets/stylesheets/components/_navbars.scss
+++ b/app/assets/stylesheets/components/_navbars.scss
@@ -36,6 +36,7 @@
   .categories_links {
     a {
       margin: 0 20px;
+      text-transform: capitalize;
     }
     a:hover {
       color: $dark-hover;
