--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -7,10 +7,12 @@ h4,
 h5,
 h6 {
   font-weight: normal;
+  text-transform: capitalize;
 }
 
 p {
   font-size: 14px;
+  text-transform: capitalize;
 }
 
 section {
