--- a/app/assets/stylesheets/sections/_index.scss
+++ b/app/assets/stylesheets/sections/_index.scss
@@ -7,7 +7,6 @@
 
   article {
     background-color: $light;
-    // border: 1px solid #757575;
     border-radius: 4px;
     box-shadow: 0 14px 45px 0 rgba(0, 0, 0, 0.10), 0 10px 18px rgba(0, 0, 0, 0.10);
     display: flex;
@@ -19,9 +18,19 @@
     text-align: center;
     width: 270px;
 
-    img {
-      align-self: center;
-      margin: 35px;
+    .portrait {
+      display: flex;
+      height: 230px;
+      justify-content: center;
+      padding: 10px;
+
+      img {
+        height: 100%;
+      }
     }
   }
+}
+
+.category_title {
+  text-align: center;
 }
