--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,15 @@
-<h1><%= @category.name %></h1>
-
-  <ul>
-<% @category.items.each do |item| %>
-  <li><%= item.title %></li>
-  <li><%= item.price %></li>
-  <li><%= link_to "Add to Cart", carts_path(item_id: item.id), method: :post %></li>
-<% end %>
-</ul>
+<h1 class="category_title"><%= @category.name %></h1>
+<div>
+  <div class="grid">
+    <% @category.items.each do |item| %>
+      <article class='item_container'>
+        <div class="portrait">
+          <img src="<%= item.image_att %>">
+        </div>
+        <%= link_to item.title, item_path(item), class: "link" %>
+        $<%= number_with_precision(item.price, :precision => 2) %>
+        <%= link_to "Add to Cart", carts_path(item_id: item.id), method: :post, class: "btn" %>
+      </article>
+    <% end %>
+  </div>
+</div>
