refactored date and time methods to have the logic in the model

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,8 +8,8 @@
   </tr>
   <tr>
     <td>Order <%= order.id %></td>
-    <td><%= order.created_at.to_date %></td>
-    <td><%= order.created_at.strftime("%I:%M%p") %></td>
+    <td><%= order.order_date %></td>
+    <td><%= order.order_time %></td>
     <td><%= order.status %></td>
   </tr>
 </table>
