updated time on orders to a time method on the order model

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -7,7 +7,7 @@
   </tr>
   <tr>
     <td>Time: </td>
-    <td><%= @order.created_at.strftime("%I:%M%p") %></td>
+    <td><%= @order.order_time %></td>
   </tr>
   <tr>
     <td>Purchaser: </td>
