--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,10 @@
 <% if current_user %>
-  <h3>Hello, <%= current_user.first_name %></h3>
-<% else %>
+  <h3>Hello, <%= current_user.first_name%> <%= current_user.last_name %></h3>
+  <h3><%= current_user.email %></h3>
+
+  <%= link_to "Edit my Profile", edit_user_path(current_user) %><br />
+
+  <%= link_to "View Past Orders", '/orders' %><br />
+
+  <% else %>
 <% end %>
