--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -5,13 +5,13 @@ $font-sans: "Avenir Next", sans-serif;
 
 $light: #F4F4F4;
 $dark: #696969;
-$accent: #FEC007;
+$accent: #B1DEDA;
 $light-text: #F4F4F4;
 $primary-text: #212121;
 $second-text: #757575;
 $divider: #BCBCBC;
 $background: #EDEDED;
-$clear-hover: #f5dd95;
+$clear-hover: #0D9B8E;
 $dark-hover: blue;
 
 * {
