--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class='navbar'>
-  <h2>Company Logo</h2>
+  <h2 class='logo'>Company Logo</h2>
   <div class='nav_links'>
     <% if current_user %>
       Logged in as <%= current_user.username %>
